# torus_voltage_solver

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_fieldline.py  bench_forward_and_grad.py
docs/: applications.md  conf.py  getting-started.md  glossary.md  index.md  inputs-and-outputs.md  installation.md  references.md
docs/_static/: custom.css
docs/algorithms/: fieldline-tracing.md  optimization.md  validation.md
docs/api/: index.md
docs/development/: ci-cd.md  contributing.md  roadmap.md  testing.md
docs/examples/: 1_simple.md  2_intermediate.md  3_advanced.md  fieldline_tracing.md  gui.md  index.md  inverse_design.md  paraview.md  performance.md  validation.md
docs/theory/: biot-savart.md  current-potential.md  electrode-model.md  geometry.md  numerics-and-units.md  surface-operators.md
examples/: README.md  drive_toroidal_field_inboard_cut.py  gui_optimize_vmec_surface_Bn.py  gui_torus_demo_helical.py  gui_torus_demo_inboard_cut.py  gui_torus_interactive.py  optimize_bumpy_axis_rotating_ellipse.py  optimize_helical_field.py  optimize_vmec_surface_Bn.py  scan_vmec_surface_regularization.py  trace_fieldlines_shell_toroidal_field.py  trace_fieldlines_tokamak.py
examples/1_simple/: convergence_bn_over_B_toroidal_current.py  external_toroidal_fieldlines.py  (+4 more)
tests/: conftest.py  test_current_potential.py  test_metrics.py  test_paraview.py  test_sensitivity_gradients.py  test_surface_ops.py  test_targets.py  test_torus_solver.py  test_validation_physics.py  test_vmec.py
(+44 files in other folders)
