[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torus-solver"
version = "0.1.0"
description = "JAX-differentiable surface-current optimization on a circular torus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4",
  "numpy>=1.22",
  "optax>=0.2",
  "jaxopt>=0.8",
  "equinox>=0.11",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
gui = ["vtk>=9.0"]
docs = [
  "sphinx>=7.2",
  "myst-parser>=2.0",
  "furo>=2024.1.29",
  "sphinx-autodoc-typehints>=2.0",
  "sphinx-copybutton>=0.5",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
